<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Spotify Streamer</string>

    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="title_activity_artist_search">Spotify Streamer</string>
    <string name="title_activity_top_tracks">Top 10 Tracks</string>
    <string name="artist_search_hint">Search for an artist</string>

    <string name="format_track_share_notification">
        Check out this song \"<xliff:g id="songName">%1$s</xliff:g>\" by <xliff:g id="artist">%2$s</xliff:g>: <xliff:g id="artist">%3$s</xliff:g>
    </string>

    <!-- Toast messages -->
    <string name="toast_error_no_artist_found">Sorry, no artist found.  Please refine your search.</string>
    <string name="toast_error_no_artist_top_songs">This artist has no top songs - how sad :(</string>
    <string name="toast_error_no_internet">No internet connection available. Please try again later.</string>
    <string name="toast_message_implemented_stage_2">To be implemented in Stage 2</string>
    <string name="toast_error_media_player_data_load">There was an error loading the song.</string>

    <!-- Preferences -->
    <string name="preference_country_code_label">Country Code</string>
    <string name="preference_country_code_key">country_code</string>
    <string name="preference_country_code_default">US</string>

    <string name="preference_enable_drawer_notifications_label">Drawer Notifications</string>
    <string name="preference_enable_drawer_notifications_key">enable_drawer_notifications</string>
    <string name="preference_enable_drawer_notifications_true">Enabled</string>
    <string name="preference_enable_drawer_notifications_false">Not Enabled</string>
    <string name="preference_enable_drawer_notifications_default">true</string>

    <string name="preference_enable_lock_screen_notifications_label">Lock Screen Notifications</string>
    <string name="preference_enable_lock_screen_notifications_key">enable_lock_screen_notifications</string>
    <string name="preference_enable_lock_screen_notifications_true">Enabled</string>
    <string name="preference_enable_lock_screen_notifications_false">Not Enabled</string>
    <string name="preference_enable_lock_screen_notifications_default">true</string>
</resources>
