<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/preference_country_code_label"
        android:key="@string/preference_country_code_key"
        android:defaultValue="@string/preference_country_code_default"
        android:entryValues="@array/preference_country_code_values"
        android:entries="@array/preference_country_code_options" />

    <CheckBoxPreference
        android:title="@string/preference_enable_drawer_notifications_label"
        android:key="@string/preference_enable_drawer_notifications_key"
        android:summaryOff="@string/preference_enable_drawer_notifications_false"
        android:summaryOn="@string/preference_enable_drawer_notifications_true"
        android:defaultValue="@string/preference_enable_drawer_notifications_default" />

    <CheckBoxPreference
        android:title="@string/preference_enable_lock_screen_notifications_label"
        android:key="@string/preference_enable_lock_screen_notifications_key"
        android:summaryOff="@string/preference_enable_lock_screen_notifications_false"
        android:summaryOn="@string/preference_enable_lock_screen_notifications_true"
        android:defaultValue="@string/preference_enable_lock_screen_notifications_default" />

</PreferenceScreen>
